<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Saloon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banner_content">Banner Image</string>
    <string name="app_title">My Saloon</string>
    <string name="search_text">Search</string>
    <string name="login_background">Background_Image</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="login_btn_text">Login</string>
    <string name="register_Account">Register New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="Area">Area/Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Top_offers">Top Offers %</string>
    <string name="see_all">See All</string>
    <string name="pincode">Pin-Code</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="amendents_and_modification_p1">The above-mentioned “Terms of Use” are subject to amendments/modifications at any time. Rojkaa reserves the right to make any kind of changes or amendments in the policies by posting the same on the platform as well as its social media handles, and you shall be responsible to keep yourself updated about the changes (if any) by checking the Rojkaa website or social . At all times, you shall be responsible to check the “Terms of Use” and other policies of Rojkaa. Your continued use of the platform and the offered services after any amendment/modification means you agree to our updated policies."\n""\n"“Terms of Use”,Rojkaa provides you a personalized, non-transferable, non-exclusive, limited privilege to access, search and make appointment bookings for grooming and personal care through the platform. By agreeing to accept the given “Terms of Use”, you also accept and agree to follow our Terms and Conditions as well as other policies, which include Privacy Policy, Cookie Policy, and Cancellation and Refund Policy.</string>
    <string name="terms_p">This document is a digital record in terms of the Information Technology Act, 2000, and policies there under as applicable and the modified rules concerned with electronic records in various forms as amended by the IT Act, 2000. It is issued with reference to the provisions of Rule 3(1) of the IT Guidelines (Intermediaries guidelines) Rules, 2011 that require issuing the rules and regulations, Terms of Use, and Privacy Policy for access or usage of Rojkaa platform (website: www.Rojkaa.com and Rojkaa app for mobile devices and tablets).</string>
    <string name="terms_of_user_p2">With reference to the implementation of these Terms of Use, our, we or us in this document shall denote Rojkaa (a digital platform of the Rojkaa Web Services Private Limited). Also, the terms you or your shall denote any individual user, either partner or customer, who has agreed to become a Rojkaa Member by providing essential information for registration on the platform using any web-connected device. \n\nRojkaa enables transactions (both cash and online) between partners and customers. The partners can list their business on the Rojkaa platform so that the potential customers can locate them and make bookings. On the other hand, Rojkaa platform allows the customers can find, select, and book appointments for required grooming and personal care services from the listed neighborhood services including but not limited to the salons, spas, and beauty parlors on the platform.</string>
    <string name="terms_of_user_p1">\The listed Terms of Use on this page govern your use of the Rojkaa Website and Rojkaa application for smart devices. Both the “Application” and the “Website” are referred to as the Platform.           "\n""\n"     \nYou are requested to go through these “Terms of Use” before subscribing or using the services offered by our platform. By downloading, installing or even simply accessing the Rojkaa web-based platform,you shall be contracting with Rojkaa and you signify that you agree to our Terms of Use and other policies, including Privacy Policy, Cookie Policy, Cancellation, and Refund Policy, and Take Down Policy, which comes into effect on the very date when you download, install or use the Services, and form a legally binding setting to abide by the same. </string>
    <string name="terms_p_two">Rojkaa platform is fully owned and operated by Rojkaa Web Services Private Limited, a company incorporated under the Companies Act, 1956 and having its registered office at G-43, First Floor, Sector-3, Noida– 201301.</string>
    <string name="registration_fee">Rojkaa doesn’t charge any amount for registration or appointment booking (Booking Fees). However, the Company reserves the right to charge membership and/or booking fees, by giving prior notice on its platform and social channels.</string>
    <string name="payments">Rojkaa allows users to make both cash and online payments for the services.</string>
    <string name="cash_payment">Customers, when requesting for an appointment, can choose the \'Pay at Counter\' option and make the payment at the venue.</string>
    <string name="online_payment">Customers, when requesting for an appointment, can choose the \'Pay Online\' option to make advance payment for the service. "\n"In this case, Rojkaa will collect the payment on behalf of the relevant partner and share a Payment Receipt (not Tax Invoice) with the user."\n"For online transactions, Rojkaa collects required financial information (such as your debit or credit number, CVV number, and expiration date) as required for payment processing. However, for safety reasons, we do not store the data.</string>
    <string name="taxation">All the services and prices listed on Rojkaa Website and Rojkaa Application are bound under the Finance Act of the Government of India. Presently, ROJKAA follows Goods and Services Tax introduced as The Constitution Act, 2017, following the passage of Constitution 122nd amendment bill. Thus, the prices of services listed on the Platform are inclusive of 18% GST.</string>
    <string name="wallet">As a welcome bonus, Rojkaa provides 100 Points to the new users on app downloads."\n""\n"1. Rojkaa Point is equivalent to Re. 1. Thus, 100 Rojkaa Points is worth Rs. 100.\n\n2. Users can redeem 50 Points for order value ranging from Rs. 99 to Rs. 499 and 100 Points on order value equal to or more than Rs. 500."\n\n"3. Rojkaa Points can’t be cancelled or transferred to any other Rojkaa Wallet"\n\n"4. Rojkaa Points cannot be transferred to any bank account or withdrawn transferred to another in the form of cash"\n\n"5. Use of Rojkaa Points in the event of Appointment Cancellations."\n\n"6. When the customer cancels the appointment(s), the Rojkaa Points used for the transaction(s) (if any) will not be refunded."\n\n"7. When Rojkaa partner cancels the appointment(s), the Rojkaa Points used for the transaction(s) (if any) will be refunded to the customers, which they can reuse later.</string>
    <string name="coupons">In its own discretion, Rojkaa, from time to time, may issue Promotional Coupons and Codes - free of charge - that can be redeemed by the users to get discounts and/or financial gains on different services. \nYou agree that Rojkaa Promotional Coupons:\n\n1. Shall not be duplicated, transferred or sold in any manner.\n\n2. Shall not be shared with others.\n\n3. Should be used within its validity.\n\n4. May be cancelled or disabled by Rojkaa at any point of time for any reason without liability to the company.\n\n\nRojkaa reserves the right to deduct or remove Promotional Coupons and Codes in the event that the Company reasonably determines or finds that the use of the same was in error, illegal, fraudulent, or in violation of the terms and conditions of the Promotional Coupons</string>
    <string name="apointment_starting_p1">To make the appointment bookings and delivery of services easier and hassle-free for both customers and partners, we allow rescheduling, rebooking, and cancellation of service via Rojkaa Website and Application.</string>
    <string name="rescheduling">Customers can reschedule their appointment 24 hours prior to their scheduled time-slot. To reschedule, you can access the Profile section (on Website) or My Bookings (on Application) and click on the Reschedule button to change the date and time. For now, we don’t charge any amount for the rescheduling facility.</string>
    <string name="rebooking">Rojkaa allows an appointment rebooking facility via website and application. Once the booking is completed, the option to rebook the same service(s) is provided to the users. Even if Rojkaa partner cancels the reservation, users can choose to rebook the same facility or accept the cancellation and request a fresh appointment with another partner.</string>
    <string name="text_messages_emails">By creating a Rojkaa Account, you agree that the company may send you SMS and emails as part of your use of the Rojkaa Services. You consent to receive information and notifications regarding the business operations of Rojkaa through text messages and emails and that you acknowledge that any actions you perform to prevent such messages and emails will affect your use of the Services.\n\nRojkaa, as a courtesy, will send a reminder through text message to the customer about the reserved appointment 1 hour prior to the scheduled time. In case, Rojkaa is not able to send the text message, please understand that it is your responsibility to remember your appointment times and dates to avoid late arrivals and missed appointments.</string>
</resources>