<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.ProfileDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_color"
        app:title="@string/edit_profile"
        app:titleTextColor="@color/white"
        android:id="@+id/edit_profile_toolbar"/>



    <ScrollView
        android:layout_below="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_height="match_parent">


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="@dimen/_120sdp"

                android:layout_height="@dimen/_130sdp"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileDetail_toolbar">


                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    app:cardCornerRadius="@dimen/_120sdp">

                    <ImageView
                        android:id="@+id/profileEditImage"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_120sdp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_profile"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    app:cardCornerRadius="@dimen/_32sdp"
                    android:background="#595252"
                       android:elevation="@dimen/_25sdp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    >

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_camera_alt_24"
                  />

                </androidx.cardview.widget.CardView>
            </FrameLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
           >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Area"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_text7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="#262525"
                android:layout_marginTop="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_edit_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/_15sdp"
                    android:textColor="@color/black"
                    android:textColorHint="#795548"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

               <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FF1744"
                android:layout_marginBottom="@dimen/_25sdp"
                android:text="@string/update"
                android:id="@+id/update_acc_btn"

                />


       </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
</FrameLayout>